--- a/index.html
+++ b/index.html
@@ -122,11 +122,8 @@
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="#latestalbum">NFT Platform</a></li>
 								<li><a href="#featuredalbum">Comunity</a></li>
-								<li><a href="#joinus">Tokenomics</a></li>
-								<li><a href="#portfolio">Portfolio</a></li>
-								<li><a href="#events">Events</a></li>
-								<li><a href="#team">Team</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#joinus">Atributos</a></li>
+								<li><a href="#team">Tokenomics</a></li>
 							</ul>
 						</div><!-- /.navbar-collapse -->
 					</div><!-- /.container-fluid -->
@@ -384,7 +381,7 @@
 					<!-- why work with us content -->
 					<div class="why-content">
 						<!-- paragraph -->
-						<p class="why-message">Aquí te dejamos algunas razones para invertir en nuestro proyecto y beneficiarte económicamente de él.</p>
+						<p class="why-message">Aquí te dejamos algunas razones para invertir en Bullish y beneficiarte económicamente de él.</p>
 						<div class="row">
 							<div class="col-md-3 col-sm-6">
 								<!-- why work with us item -->
