--- a/index.html
+++ b/index.html
@@ -463,6 +463,14 @@
 									<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
 								</div>
 							</div>
+							<div class="col-md-4 col-sm-4">
+								<div class="what-we-item ">
+									<!-- heading with icon -->
+									<h3><i class="fa fa-hand-o-up"></i> Why choose us?</h3>
+									<!-- paragraph -->
+									<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
