--- a/index.html
+++ b/index.html
@@ -442,33 +442,25 @@
 							<div class="col-md-4 col-sm-4">
 								<div class="what-we-item ">
 									<!-- heading with icon -->
-									<h3><i class="fa fa-money"></i> What we do?</h3>
+									<h3><i class="fa fa-money"></i> 10% Equipo, desarrollo y Marketing</h3>
 									<!-- paragraph -->
-									<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+									<p>se distribuirá el 5% para el equipo de desarrollo, el restante 5% de los token serán para marqueting y nuevos desarrolladores.</p>
 								</div>
 							</div>
 							<div class="col-md-4 col-sm-4">
 								<div class="what-we-item ">
 									<!-- heading with icon -->
-									<h3><i class="fa fa-hand-o-up"></i> Why choose us?</h3>
+									<h3><i class="fa fa-hand-o-up"></i> 40% Exchange y liquidez</h3>
 									<!-- paragraph -->
-									<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+									<p>Los tokens se liberaran y se generará liquidez sobre este 40%, será progresiva la liberación.</p>
 								</div>
 							</div>
 							<div class="col-md-4 col-sm-4">
 								<div class="what-we-item ">
 									<!-- heading with icon -->
-									<h3><i class="fa fa-map-marker"></i> Where we are?</h3>
+									<h3><i class="fa fa-map-marker"></i> 50% se quemarán</h3>
 									<!-- paragraph -->
-									<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-4">
-								<div class="what-we-item ">
-									<!-- heading with icon -->
-									<h3><i class="fa fa-hand-o-up"></i> Why choose us?</h3>
-									<!-- paragraph -->
-									<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+									<p>Tras cada transacción se quema el 1% de los tokens, así mismo se quemará el 50 del total supply en el periodo de un año, recompraremos los excedentes.</p>
 								</div>
 							</div>
 						</div>
