--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 							<div class="col-md-3 col-sm-4">
 								<div class="cta-btn text-center">
 									<!-- purchase now button -->
-									<a href="#" class="btn btn-default btn-lg">Regístrate</a>
+									<a href="https://forms.gle/XJS4GyhYc7eJY4Gp7" target="_blank" class="btn btn-default btn-lg">Regístrate</a>
 								</div>
 							</div>
 						</div>
