--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@
 				<div class="container">
 					<!-- social media links -->
 					<div class="social">
-						<a class="h-twitter" href="#"><i class="fa fa-twitter"></i></a>
+						<a class="h-twitter" href="https://twitter.com/BullishNFTDEFI"><i class="fa fa-twitter"></i></a>
 						<a class="h-telegram" href="#"><i class="fa fa-telegram"></i></a>
-						<a class="h-reddit" href="#"><i class="fa fa-reddit"></i></a>
+						<a class="h-reddit" href="https://www.reddit.com/r/Bullish_NTF/"><i class="fa fa-reddit"></i></a>
 					</div>
 					<!-- copy right -->
 					<p class="copy-right">&copy; copyright 2021, All rights are reserved Bullish Inc.</p>
