--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 							<div class="col-md-4 col-sm-4">
 								<div class="what-we-item ">
 									<!-- heading with icon -->
-									<h3><i class="fa fa-map-marker"></i> 50% se quemarán</h3>
+									<h3><i class="fa fa-fire"></i> 50% se quemarán</h3>
 									<!-- paragraph -->
 									<p>Tras cada transacción se quema el 1% de los tokens, así mismo se quemará el 50 del total supply en el periodo de un año, recompraremos los excedentes.</p>
 								</div>
