--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<div class="container">
 						<!-- secondary menu left link area -->
 						<div class="sm-left">
-							<strong>Our Smart Contract</strong>:&nbsp; <a href="#">0x4794f3eb5b399e7c59a1520bd7f6c9d5589b23e1</a>&nbsp;&nbsp;&nbsp;&nbsp;
+							<strong>Nustro </strong>:&nbsp; <a href="#">Smart Contract</a>&nbsp;&nbsp;&nbsp;&nbsp;
 						</div>
 						<!-- secondary menu right link area -->
 						<div class="sm-right">
