--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 									<!-- paragraph -->
 									<h3 class="animated fadeInRightBig">NFT - DEFI Todos los talentos pueden ser monetizados.</h3>
 									<!-- button -->
-									<a href="#" class="animated fadeIn btn btn-theme">Comprar preventa</a>
+									<a href="https://forms.gle/XLr1TVGBhmA6TTy66" Target="blank" class="animated fadeIn btn btn-theme">Comprar preventa</a>
 								</div>
 							</div>
 						</div>
@@ -419,7 +419,7 @@
 						<!-- apply button -->
 						<div class="apply-btn">
 							<!-- button line -->
-							<a class="btn btn-lg btn-theme" href="#">Comprar Preventa</a>
+							<a class="btn btn-lg btn-theme" href="https://forms.gle/XLr1TVGBhmA6TTy66" Target="blank">Comprar Preventa</a>
 						</div>
 					</div>
 				</div>
