--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
 						<p>Aquí conectamos el  <strong class="theme-color">Arte</strong> con la   <strong class="theme-color">inversión</strong>.</p>
 						<p>El Artista Beeple vendiió su obra por <strong class="theme-color">70 millones</strong>  de dolares. Jack Dorsey vendió su primer Tweet por   <strong class="theme-color">2,9 millones</strong> de dolares.</p>
 						<p>Las mas diversas formas de arte tienen espacio en los   <strong class="theme-color">NFT,</strong> Esta es la nueva economía y nosotros te  <strong class="theme-color">conectamos</strong>.</p>
+						<!-- button -->
+						<a href="https://forms.gle/XLr1TVGBhmA6TTy66" Target="blank" class="animated fadeIn btn btn-theme">Comprar preventa</a>
 
 					</div>
 					<!-- hero play list -->
@@ -335,6 +337,8 @@
 										<h4>Todo lo que exprese</h4>
 										<!-- horizontal line -->
 										<hr />
+										<!-- button -->
+										<a href="https://forms.gle/XLr1TVGBhmA6TTy66" Target="blank" class="animated fadeIn btn btn-theme">Comprar preventa</a>
 										<!-- some responce from social medial or web likes 
 										<p>1024+ <span class="label label-theme">Like</span> &nbsp;&nbsp; 825+ <span class="label label-theme">Love</span></p>  -->
 									</div>
@@ -461,6 +465,8 @@
 									<h3><i class="fa fa-fire"></i> 50% se quemarán</h3>
 									<!-- paragraph -->
 									<p>Tras cada transacción se quema el 1% de los tokens, así mismo se quemará el 50 del total supply en el periodo de un año, recompraremos los excedentes.</p>
+									<!-- button -->
+									<a href="https://forms.gle/XLr1TVGBhmA6TTy66" Target="blank" class="animated fadeIn btn btn-theme">Comprar preventa</a>
 								</div>
 							</div>
 						</div>
