--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 									<h2 class="animated fadeInLeftBig"><i class="#"></i> Forma parte de la comunidad Bullish</h2>
 									<!-- paragraph -->
 									<h3 class="animated fadeInRightBig">NFT - DEFI Todos los talentos pueden ser monetizados.</h3>
+									<h3 class="animated fadeInRightBig">Somos Imparables.</h3>
 									<!-- button -->
 									<a href="https://forms.gle/XLr1TVGBhmA6TTy66" Target="blank" class="animated fadeIn btn btn-theme">Comprar preventa</a>
 								</div>
